--- a/css/custom.css
+++ b/css/custom.css
@@ -1,25 +1,13 @@
-
-
-.wrapper {
-    padding: 50px;
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #004098; /* Blue */
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 2s linear infinite;
 }
 
-.container {
-    text-align: center;
-}
-
-#d-button {
-    font-size: 20px;
-}
-
-#git-button {
-    font-size: 20px;
-}
-
-button {
-    margin: 10px 20px;
-}
-
-input {
-    margin: 10px 20px;
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
